--- a/css/fxstyle.css
+++ b/css/fxstyle.css
@@ -210,6 +210,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .fx-padding-64{padding-top:64px!important;padding-bottom:64px!important}
 .fx-padding-top-8{padding-top:8px!important}
 .fx-padding-top-16{padding-top:16px!important}
+.fx-padding-top-24{padding-top:24px!important}
 .fx-padding-top-64{padding-top:64px!important}
 .fx-padding-top-48{padding-top:48px!important}
 .fx-padding-top-80{padding-top:80px!important}
